cmake_minimum_required(VERSION 3.5)
project(ch3)

set(CMAKE_CXX_STANDARD 14)

add_executable(3-2 3-2.cpp)
add_executable(3-4 3-4.cpp)
add_executable(3-5 3-5.cpp)
add_executable(3-6 3-6.cpp)
add_executable(3-7 3-7.cpp)
add_executable(3-8 3-8.cpp)
add_executable(3-10 3-10.cpp)
add_executable(3-14 3-14.cpp)
add_executable(3-15 3-15.cpp)
add_executable(3-16 3-16.cpp)
add_executable(3-17 3-17.cpp)
add_executable(3-20 3-20.cpp)
add_executable(3-21 3-21.cpp)
add_executable(3-22 3-22.cpp)
add_executable(3-23 3-23.cpp)
add_executable(3-24 3-24.cpp)
add_executable(3-25 3-25.cpp)
add_executable(3-31 3-31.cpp)
add_executable(3-32 3-32.cpp)
add_executable(3-35 3-35.cpp)
add_executable(3-36 3-36.cpp)
add_executable(3-39 3-39.cpp)
add_executable(3-40 3-40.cpp)
add_executable(3-41 3-41.cpp)
add_executable(3-42 3-42.cpp)
