cmake_minimum_required(VERSION 3.5)
project(ch6)

set(CMAKE_CXX_STANDARD 14)
include_directories(include)

add_executable(7-2 7-2.cpp)
add_executable(7-3 7-3.cpp)
add_executable(7-7 7-7.cpp)
add_executable(7-11 7-11.cpp)
add_executable(7-13 7-13.cpp)
add_executable(7-21 7-21.cpp)
add_executable(7-23 7-23.cpp)
add_executable(7-32 7-32.cpp)
add_executable(7-43 7-43.cpp)
add_executable(test test.cpp)

add_executable(Person person.cpp)


