cmake_minimum_required(VERSION 3.5)
project(ch5)

set(CMAKE_CXX_STANDARD 14)

add_executable(8-1 8-1.cpp)
add_executable(8-4 8-4.cpp)
add_executable(8-5 8-5.cpp)
add_executable(8-6 8-6.cpp)
add_executable(8-7 8-7.cpp)
add_executable(8-9 8-9.cpp)
add_executable(8-10 8-10.cpp)
add_executable(8-11 8-11.cpp)
